# algorithms_and_data_structures

./: .gitignore  @  CMakeCache.txt  CMakeLists.txt  Check if Linked List is Palindrome  Compare two linked lists  Count total set bits  Distance and Displacement  Find Prime numbers in a range  Heap sort algo  Kruskal.java  README.md  README.md~  Readme2.md  algo1  algo2  algo3  algo4  algo5  circularqueue.cpp  day1-reverseSentence.cpp  deletion_cmake  exitpoint.java  floyd_warshall.cpp  heap_sort_algorithm  merge 2 sorted array in o(1)  mergesort.cpp  pascalstriangle.cpp  valid parenthesis
Advanced Recursion/: Inversion count  Merge Sort Code  Print Keypad Combinations Code  Quick Sort Code  Remove Duplicates Recursively  Replace Character Recursively  Return Keypad Code
Heap/: 01 InsertinHeap.cpp  02 CreateHeapUsingSTLVector.cpp  03 Insert in Heap.cpp  04 Delete element from Heap.c  05 Heap sort.c  06 HeapifyFunctionFasterMethodtoCreateHeap.cpp
Patterns with C++/: Pattern Hollow_Rhombus.cpp  fibonacciTriangle.cpp
Patterns_With_C++/: PatternDoubleSidedArrow.cpp  PatternHollowDiamond.cpp  PatternInvertedHourGlass.cpp  ZeroesBetweenInts.cpp  fibonacciTriangle.cpp  increasingDecreasingTriangle.cpp
Sorting Technique/: 01 Bubble Sort.c  02 BubbleSort.cpp  03 Insertionsort.c  04 InsertionSort.cpp  05 Selection Sort.c  06 SelectionSort.cpp  07 Mergesort.c  08 MergingFunction.cpp  09 Iterative Mergesort.c  10 IterativeMergeSort.cpp  11 Recursive Mergesort.c  12 RecursiveMergeSort.cpp  13 Count Sort.cpp  14 CountSortFunction.cpp  15 RadixSort Using LL.cpp  17 Shellsort.cpp  (+2 more)
(+776 files in other folders)
